# rust-service-discovery

./: Cargo.toml  README.md  rsd.code-workspace
pub/: index.html
src/: main.rs
src/database/: mod.rs
src/handlers/: healthcheck.rs  mod.rs  webservice.rs
