[package]
name = "rust-service-discovery"
version = "0.1.0"
authors = ["Nicolas Bonamy <nicolas@bonamy.fr>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4"
actix-web = "3"
actix-files = "0.3"
env_logger = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
